--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "devDependencies": {
     "@types/node": "16.11.6",
-    "@types/react": "^17.0.34",
+    "@types/react": "^17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
     "typescript": "4.4.4"
