--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "akh-site",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "clsx": "^1.1.1",
-    "next": "12.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sass": "^1.43.4"
-  },
-  "devDependencies": {
-    "@types/node": "16.11.6",
-    "@types/react": "^17.0.38",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.3",
-    "typescript": "4.4.4"
-  }
+	"name": "akh-site",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"clsx": "^1.1.1",
+		"next": "12.0.3",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"sass": "^1.43.4"
+	},
+	"devDependencies": {
+		"@types/node": "16.11.6",
+		"@types/react": "^17.0.38",
+		"@typescript-eslint/eslint-plugin": "^5.9.0",
+		"@typescript-eslint/parser": "^5.9.0",
+		"eslint": "7.32.0",
+		"eslint-config-next": "12.0.3",
+		"eslint-config-prettier": "^8.3.0",
+		"prettier": "^2.5.1",
+		"typescript": "4.4.4"
+	}
 }
