--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"prepare": "husky install",
+		"check-types": "tsc --pretty --noEmit",
+		"check-format": "prettier --check .",
+		"check-lint": "eslint . --ext ts --ext tsx --ext js",
+		"format": "prettier --write .",
+		"husky-test-all": "npm run check-types && npm run check-format && npm run check-lint && npm run format && npm run build"
 	},
 	"dependencies": {
 		"clsx": "^1.1.1",
@@ -23,6 +29,7 @@
 		"eslint-config-next": "12.0.3",
 		"eslint-config-prettier": "^8.3.0",
 		"prettier": "^2.5.1",
-		"typescript": "4.4.4"
+		"typescript": "4.4.4",
+		"husky": "^7.0.0"
 	}
 }
