eslintrc ingored by prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,10 @@
 		"ecmaVersion": 12,
 		"sourceType": "module"
 	},
-	"plugins": ["react", "@typescript-eslint"],
+	"plugins": [
+		"react",
+		"@typescript-eslint"
+	],
 	"rules": {
 		"indent": [
 			"error",
@@ -28,11 +31,22 @@
 				"SwitchCase": 1
 			}
 		],
-		"linebreak-style": ["error", "unix"],
-		"quotes": ["error", "single"],
-		"semi": ["error", "always"],
+		"linebreak-style": [
+			"error",
+			"unix"
+		],
+		"quotes": [
+			"error",
+			"single"
+		],
+		"semi": [
+			"error",
+			"always"
+		],
 		"no-unused-vars": "off",
-		"@typescript-eslint/no-unused-vars": ["error"]
+		"@typescript-eslint/no-unused-vars": [
+			"error"
+		]
 	},
 	"settings": {
 		"react": {
