--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
 		"husky-test-all": "npm run check-types && npm run check-format && npm run check-lint && npm run format && npm run build"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.9.3",
+		"@emotion/styled": "^11.9.3",
+		"@mui/material": "^5.8.5",
 		"clsx": "^1.1.1",
+		"hamburger-react": "^2.5.0",
 		"next": "12.0.5",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
@@ -28,8 +32,8 @@
 		"eslint": "7.32.0",
 		"eslint-config-next": "12.0.3",
 		"eslint-config-prettier": "^8.3.0",
+		"husky": "^7.0.0",
 		"prettier": "^2.5.1",
-		"typescript": "4.4.4",
-		"husky": "^7.0.0"
+		"typescript": "4.4.4"
 	}
 }
