--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@mui/material": "^5.8.5",
 		"clsx": "^1.1.1",
 		"hamburger-react": "^2.5.0",
+		"moment": "^2.29.3",
 		"next": "12.0.5",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
