--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
 		"@emotion/react": "^11.9.3",
 		"@emotion/styled": "^11.9.3",
 		"@mui/material": "^5.8.5",
+		"@types/marked": "^4.0.3",
 		"clsx": "^1.1.1",
+		"front-matter": "^4.0.2",
 		"hamburger-react": "^2.5.0",
+		"marked": "^4.0.17",
 		"moment": "^2.29.3",
 		"next": "12.0.5",
 		"react": "17.0.2",
