--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"next": "12.0.5",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-lazy-load-image-component": "^1.5.5",
 		"sass": "^1.43.4"
 	},
 	"devDependencies": {
