--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@mui/lab": "^5.0.0-alpha.88",
 		"@mui/material": "^5.8.6",
 		"@types/marked": "^4.0.3",
+		"@types/react-lazy-load-image-component": "^1.5.2",
 		"clsx": "^1.1.1",
 		"front-matter": "^4.0.2",
 		"hamburger-react": "^2.5.0",
@@ -27,7 +28,6 @@
 		"next": "12.0.5",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-lazy-load-image-component": "^1.5.5",
 		"sass": "^1.43.4"
 	},
 	"devDependencies": {
