--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
+		"postbuild": "next-sitemap",
 		"start": "next start",
 		"lint": "next lint",
 		"prepare": "husky install",
@@ -26,6 +27,7 @@
 		"marked": "^4.0.17",
 		"moment": "^2.29.3",
 		"next": "12.0.5",
+		"next-sitemap": "^3.1.21",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"sass": "^1.43.4"
