--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
 		"@emotion/styled": "^11.9.3",
 		"@mui/lab": "^5.0.0-alpha.88",
 		"@mui/material": "^5.8.6",
+		"@types/ftp": "^0.3.33",
 		"@types/marked": "^4.0.3",
 		"@types/react-lazy-load-image-component": "^1.5.2",
+		"@types/ssh2-sftp-client": "^9.0.0",
 		"clsx": "^1.1.1",
 		"front-matter": "^4.0.2",
+		"ftp": "^0.3.10",
 		"hamburger-react": "^2.5.0",
 		"marked": "^4.0.17",
 		"moment": "^2.29.3",
@@ -30,7 +33,8 @@
 		"next-sitemap": "^3.1.21",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"sass": "^1.43.4"
+		"sass": "^1.43.4",
+		"ssh2-sftp-client": "^9.0.4"
 	},
 	"devDependencies": {
 		"@types/node": "16.11.6",
