--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"next": "12.0.5",
 		"next-sitemap": "^3.1.21",
 		"react": "17.0.2",
+		"react-circular-progressbar": "^2.1.0",
 		"react-dom": "17.0.2",
 		"sass": "^1.43.4",
 		"ssh2-sftp-client": "^9.0.4"
