--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
 		"hamburger-react": "^2.5.0",
 		"marked": "^4.0.17",
 		"moment": "^2.29.3",
-		"next": "12.0.5",
-		"next-sitemap": "^3.1.21",
-		"react": "17.0.2",
+		"next": "^13.2.4",
+		"next-sitemap": "^4.0.6",
+		"react": "^18.2.0",
 		"react-circular-progressbar": "^2.1.0",
-		"react-dom": "17.0.2",
+		"react-dom": "^18.2.0",
 		"sass": "^1.43.4",
 		"ssh2-sftp-client": "^9.0.4"
 	},
@@ -45,7 +45,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.9.0",
 		"@typescript-eslint/parser": "^5.9.0",
 		"eslint": "7.32.0",
-		"eslint-config-next": "12.0.3",
+		"eslint-config-next": "^13.2.4",
 		"eslint-config-prettier": "^8.3.0",
 		"husky": "^7.0.0",
 		"prettier": "^2.5.1",
