Tina CMS configurted

--- a/package.json
+++ b/package.json
@@ -1,54 +1,56 @@
 {
-	"name": "akh-site",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"postbuild": "next-sitemap",
-		"start": "next start",
-		"lint": "next lint",
-		"prepare": "husky install",
-		"check-types": "tsc --pretty --noEmit",
-		"check-format": "prettier --check .",
-		"check-lint": "eslint . --ext ts --ext tsx --ext js",
-		"format": "prettier --write .",
-		"husky-test-all": "npm run check-types && npm run check-format && npm run check-lint && npm run format && npm run build"
-	},
-	"dependencies": {
-		"@emotion/react": "^11.9.3",
-		"@emotion/styled": "^11.9.3",
-		"@mui/lab": "^5.0.0-alpha.88",
-		"@mui/material": "^5.8.6",
-		"@types/ftp": "^0.3.33",
-		"@types/marked": "^4.0.3",
-		"@types/react-lazy-load-image-component": "^1.5.2",
-		"@types/ssh2-sftp-client": "^9.0.0",
-		"@types/woocommerce__woocommerce-rest-api": "^1.0.2",
-		"@woocommerce/woocommerce-rest-api": "^1.0.1",
-		"clsx": "^1.1.1",
-		"front-matter": "^4.0.2",
-		"ftp": "^0.3.10",
-		"hamburger-react": "^2.5.0",
-		"marked": "^4.0.17",
-		"moment": "^2.29.3",
-		"next": "^13.2.4",
-		"next-sitemap": "^4.0.6",
-		"react": "^18.2.0",
-		"react-circular-progressbar": "^2.1.0",
-		"react-dom": "^18.2.0",
-		"sass": "^1.43.4",
-		"ssh2-sftp-client": "^9.0.4"
-	},
-	"devDependencies": {
-		"@types/node": "16.11.6",
-		"@types/react": "^17.0.38",
-		"@typescript-eslint/eslint-plugin": "^5.9.0",
-		"@typescript-eslint/parser": "^5.9.0",
-		"eslint": "7.32.0",
-		"eslint-config-next": "^13.2.4",
-		"eslint-config-prettier": "^8.3.0",
-		"husky": "^7.0.0",
-		"prettier": "^2.5.1",
-		"typescript": "4.4.4"
-	}
+  "name": "akh-site",
+  "private": true,
+  "scripts": {
+    "dev": "tinacms dev -c \"next dev\"",
+    "build": "tinacms build && next build",
+    "postbuild": "next-sitemap",
+    "start": "tinacms build && next start",
+    "lint": "next lint",
+    "prepare": "husky install",
+    "check-types": "tsc --pretty --noEmit",
+    "check-format": "prettier --check .",
+    "check-lint": "eslint . --ext ts --ext tsx --ext js",
+    "format": "prettier --write .",
+    "husky-test-all": "npm run check-types && npm run check-format && npm run check-lint && npm run format && npm run build"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/lab": "^5.0.0-alpha.88",
+    "@mui/material": "^5.8.6",
+    "@tinacms/cli": "^1.5.5",
+    "@types/ftp": "^0.3.33",
+    "@types/marked": "^4.0.3",
+    "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/ssh2-sftp-client": "^9.0.0",
+    "@types/woocommerce__woocommerce-rest-api": "^1.0.2",
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "clsx": "^1.1.1",
+    "front-matter": "^4.0.2",
+    "ftp": "^0.3.10",
+    "hamburger-react": "^2.5.0",
+    "marked": "^4.0.17",
+    "moment": "^2.29.3",
+    "next": "^13.2.4",
+    "next-sitemap": "^4.0.6",
+    "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.43.4",
+    "ssh2-sftp-client": "^9.0.4",
+    "tinacms": "^1.4.5"
+  },
+  "devDependencies": {
+    "@types/node": "16.11.6",
+    "@types/react": "^17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "eslint": "7.32.0",
+    "eslint-config-next": "^13.2.4",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.0",
+    "prettier": "^2.5.1",
+    "typescript": "4.4.4"
+  }
 }
