--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "husky-test-all": "npm run check-types && npm run check-format && npm run check-lint && npm run format && npm run build"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
     "@tinacms/cli": "^1.5.5",
     "@types/ftp": "^0.3.33",
-    "@types/marked": "^4.0.3",
+    "@types/marked": "^5.0.0",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/ssh2-sftp-client": "^9.0.0",
     "@types/woocommerce__woocommerce-rest-api": "^1.0.2",
@@ -30,7 +30,7 @@
     "front-matter": "^4.0.2",
     "ftp": "^0.3.10",
     "hamburger-react": "^2.5.0",
-    "marked": "^4.0.17",
+    "marked": "^5.0.2",
     "moment": "^2.29.3",
     "next": "^13.2.4",
     "next-sitemap": "^4.0.6",
@@ -42,15 +42,15 @@
     "tinacms": "^1.4.5"
   },
   "devDependencies": {
-    "@types/node": "16.11.6",
-    "@types/react": "^17.0.38",
+    "@types/node": "^20.2.3",
+    "@types/react": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
-    "eslint": "7.32.0",
+    "eslint": "^8.41.0",
     "eslint-config-next": "^13.2.4",
     "eslint-config-prettier": "^8.3.0",
-    "husky": "^7.0.0",
+    "husky": "^8.0.3",
     "prettier": "^2.5.1",
-    "typescript": "4.4.4"
+    "typescript": "^5.0.4"
   }
 }
