--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ version: '3.1'
 services:
 
   wordpress:
-    image: wordpress:6.5.3-php8.2-apache
+    build:
+      dockerfile: Dockerfile
+      context: ./
     ports:
       - 80:80
     environment:
@@ -11,9 +13,11 @@ services:
       WORDPRESS_DB_USER: ${WORDPRESS_DB_USER}
       WORDPRESS_DB_PASSWORD: ${WORDPRESS_DB_PASSWORD}
       WORDPRESS_DB_NAME: ${WORDPRESS_DB_NAME}
+      WORDPRESS_DEBUG: ${WORDPRESS_DEBUG}
     volumes:
       - ./app:/var/www/html
       - ./uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
+      - ./xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
 
   database:
     image: mysql
