--- a/package.json
+++ b/package.json
@@ -11,5 +11,7 @@
   "engines": {
     "node": "20.x"
   },
-  "workspaces": []
+  "workspaces": [
+    "app/wp-content/themes/akiralyhalott"
+  ]
 }
