--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
       WORDPRESS_DB_NAME: ${WORDPRESS_DB_NAME}
       WORDPRESS_DEBUG: ${WORDPRESS_DEBUG}
     volumes:
-      - ./app:/var/www/html
-      - ./uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
-      - ./xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
+      - ./wordpress/app:/var/www/html
+      - ./wordpress/settings/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
+      - ./wordpress/settings/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
 
   database:
     image: mysql
@@ -51,5 +51,4 @@ services:
       start_period: 5s
 
 volumes:
-  wordpress:
   db:
