fix: server directory path fix

--- a/.github/workflows/publish-theme-dev.yml
+++ b/.github/workflows/publish-theme-dev.yml
@@ -26,6 +26,6 @@ jobs:
         username: akiralh_1
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./app/wp-content/themes/akiralyhalott/
-        server-dir: /public_html/dev/
+        server-dir: /wp-content/themes/akiralyhalott/
         protocol: ftps
         port: 21
