--- a/app/wp-content/themes/akiralyhalott/package.json
+++ b/app/wp-content/themes/akiralyhalott/package.json
@@ -1,16 +1,17 @@
 {
     "name": "theme",
     "version": "1.0.0",
-    "description": "",
     "private": true,
     "scripts": {
         "build": "webpack",
+        "dev": "webpack --watch",
         "tailwind": "npx tailwindcss -i ./main.css -o ./build/main.css --minify",
         "tailwind:start": "npx tailwindcss -i ./main.css -o ./build/main.css --watch"
     },
     "author": "Balázs Venyige",
     "license": "UNLICENSED",
     "dependencies": {
+        "@glidejs/glide": "3.6.2",
         "@wordpress/icons": "10.0.0",
         "@wordpress/scripts": "27.7.0",
         "tailwindcss": "3.4.4"
