feat: js build added to deployment pipeline

--- a/.github/workflows/publish-theme-dev.yml
+++ b/.github/workflows/publish-theme-dev.yml
@@ -12,7 +12,7 @@ jobs:
     - name: 🚚 Get latest code
       uses: actions/checkout@v2
 
-    - name: Use Node.js 14
+    - name: Use Node.js 20
       uses: actions/setup-node@v2
       with:
         node-version: '20'
@@ -22,6 +22,7 @@ jobs:
         cd ./app/wp-content/themes/akiralyhalott
         npm install
         npm run tailwind
+        npm run build
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.2
