--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "11.13.5",
     "@next/third-parties": "15.0.3",
+    "embla-carousel-react": "8.5.1",
     "next": "14.2.17",
     "react": "^18",
+    "react-awesome-reveal": "4.2.14",
     "react-dom": "^18"
   },
   "devDependencies": {
