--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "11.13.5",
-    "@next/third-parties": "15.0.3",
+    "@emotion/react": "11.14.0",
+    "@next/third-parties": "15.1.3",
     "embla-carousel-react": "8.5.1",
-    "next": "14.2.17",
-    "react": "^18",
-    "react-awesome-reveal": "4.2.14",
-    "react-dom": "^18"
+    "next": "15.1.3",
+    "react": "19.0.0",
+    "react-awesome-reveal": "4.3.1",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
