--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "dependencies": {
     "@emotion/react": "11.14.0",
     "@next/third-parties": "15.1.3",
+    "@payloadcms/db-postgres": "3.12.0",
+    "@payloadcms/next": "3.12.0",
+    "@payloadcms/payload-cloud": "3.12.0",
+    "@payloadcms/richtext-lexical": "3.12.0",
     "embla-carousel-react": "8.5.1",
+    "graphql": "16.10.0",
     "next": "15.1.3",
+    "payload": "3.12.0",
     "react": "19.0.0",
     "react-awesome-reveal": "4.3.1",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "sharp": "0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
