feat: front end connected to cms

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "payload": "PAYLOAD_CONFIG_PATH=payload.config.ts payload"
   },
   "dependencies": {
     "@emotion/react": "11.14.0",
