--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@payloadcms/payload-cloud": "3.12.0",
     "@payloadcms/richtext-lexical": "3.12.0",
     "@payloadcms/storage-azure": "3.12.0",
+    "clsx": "2.1.1",
     "embla-carousel-react": "8.5.1",
     "graphql": "16.10.0",
     "next": "15.1.3",
@@ -27,6 +28,7 @@
     "sharp": "0.33.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "9.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
