--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - postgres:/data/postgres
     ports:
-      - "5432:5432"
+      - '5432:5432'
     restart: unless-stopped
 
   pgadmin:
@@ -24,7 +24,7 @@ services:
       - pgadmin:/var/lib/pgadmin
 
     ports:
-      - "${PGADMIN_PORT:-8080}:80"
+      - '${PGADMIN_PORT:-8080}:80'
     restart: unless-stopped
 
 volumes:
