--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "payload": "PAYLOAD_CONFIG_PATH=payload.config.ts payload"
+    "payload": "PAYLOAD_CONFIG_PATH=payload.config.ts payload",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@emotion/react": "11.14.0",
@@ -19,6 +21,7 @@
     "@payloadcms/storage-azure": "3.12.0",
     "clsx": "2.1.1",
     "embla-carousel-react": "8.5.1",
+    "eslint-config-prettier": "10.1.2",
     "graphql": "16.10.0",
     "next": "15.1.3",
     "payload": "3.12.0",
@@ -36,6 +39,7 @@
     "eslint-config-next": "14.2.17",
     "postcss": "^8",
     "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
