--- a/package.json
+++ b/package.json
@@ -11,21 +11,16 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@emotion/react": "11.14.0",
     "@next/third-parties": "15.1.3",
     "clsx": "2.1.1",
     "embla-carousel-react": "8.5.1",
     "eslint-config-prettier": "10.1.2",
-    "graphql": "16.10.0",
     "next": "15.2.4",
-    "payload": "3.12.0",
     "react": "19.0.0",
-    "react-awesome-reveal": "4.3.1",
     "react-dom": "19.0.0",
     "sharp": "0.33.5"
   },
   "devDependencies": {
-    "@faker-js/faker": "9.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -36,5 +31,9 @@
     "prettier-plugin-tailwindcss": "0.6.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": "22.x",
+    "npm": "10.x"
   }
 }
