--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "embla-carousel-react": "8.5.1",
     "eslint-config-prettier": "10.1.2",
     "next": "15.2.4",
+    "nextjs-toploader": "3.8.16",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sharp": "0.33.5"
